# SystemInfo

./: CMakeLists.txt  First_Project.pro  README.md  main.cpp  main.qml  systeminfo.cpp  systeminfo.h
src/: CPU.qml  cpuinfo.cpp  cpuinfo.h  main.cpp  main.qml  qml.qrc  raminfo.cpp  raminfo.h  systeminfo.cpp  systeminfo.h
src/headers/: systeminfo.h
src/qml/: CPU.qml  RAM.qml  main.qml  qml.qrc
src/sources/: main.cpp  systeminfo.cpp
